[package]
name = "rust-rbe"
version = "0.1.0"
edition = "2021"

[build-dependencies]
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }

[dependencies]
rand = "0.8.5"
num-traits = "0.2.17"
ark-bn254 = "0.4.0"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ethers = { git = "https://github.com/gakonst/ethers-rs", features=["abigen", "solc-full"] }
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread"] }